# apna-browser-hackathon

./: .gitignore  AI_AGENTS_GUIDES.md  ARCHITECTURE.md  ARCHITECTURE_FIX_SUMMARY.md  ARCHITECTURE_OPTIONS.md  BUILD_SUMMARY.md  CODING_RULES.md  ERRORS_FIXED.md  KEY_FIXES.md  MIGRATION_SUMMARY.md  NEW_ARCHITECTURE.md  PRD.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  TASKS.md  UPDATE_COMPLETE.md  USER_GUIDE.md  VERIFICATION.md  VERIFICATION_CHECKLIST.md  homepage.html  index.html  main.js  package-lock.json  package.json  renderer.js  start.sh
frontend/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
