[package]
name = "apna-browser"
version = "0.1.0"
description = "A lightweight desktop browser prototype built with Tauri"
authors = ["Apna Browser Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
urlencoding = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
